--- a/Ch3/README
+++ b/Ch3/README
@@ -1,4 +1,4 @@
-Implementations of selected algorithms from Chapter 3
+Implementations of selected algorithms and presentation slides from Chapter 3
 Questions/bugs: aubanel@unb.ca
 
 Algorithm 3.1	kmeans.c
@@ -6,3 +6,5 @@ Data set for Fig. 3.7	kmeansEg.txt
 Algorithms 3.2 and 3.3 (fixes bug in 3.3)	mergeSort.c
 Algorithm 3.5 gameOfLife.c
 Algorithm 3.6	subsetSum.c
+Slides for Sections 3.1-3.3	algorithmicStruc1.pdf
+Slides for Sections 3.4-3.7	algorithmicStruc2.pdf
